manifests/canary/blue-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: test
  name: bluered
spec:
  replicas: 2
  selector:
    matchLabels:
      run: test
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: test
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: redblue
      volumes:
      - name: redblue
        configMap:
          name: blue
