manifests/canary/red-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: red
spec:
  selector:
    app: red
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
