manifests/canary/redblue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redblue
spec:
  selector:
    app: red
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
